# narf

./: MANIFEST.in  Makefile  README.md  pyproject.toml  setup.sh  test.py
datasets/: datasets2016.py  narf
doc/: ioutils.md
narf/: __init__.py  clingutils.py  combineutils.py  common.py  dataset.py  fitutils.py  fitutilsjax.py  graph_builder.py  histutils.py  ioutils.py  lumitools.cpp  lumitools.py  matrix_utils.py  rdfutils.py  tests.py  tfliteutils.py  tfutils.py
narf/include/: FillBoostHelperAtomic.h  FillBoostHelperAtomic.hpp  adopted_storage.h  atomic_adaptor.h  atomic_adaptor.hpp  concurrent_flat_map.hpp  histutils.h  histutils.hpp  lumitools.h  matrix_utils.hpp  onnxutils.h  onnxutils.hpp  progresshelper.hpp  rdfutils.hpp  sparse_histogram.hpp  tensorevalutils.hpp  tensorutils.h  tensorutils.hpp  tests.hpp  tfccutils.h  tfcutils.h  tfliteutils.h  tfliteutils.hpp  traits.h  utils.hpp  view.h  weighted_sum.h
narf/src/: tfccutils.cpp
scripts/fitting/: combinetf2.py
scripts/iotest/: testhdf5.py  testpkl.py  testread.py
scripts/test/: testsplinepdf.py  testsplinepdf2d.py
test/: testconcurrentflatmap.py  testmapwrapper.py  testquantilehelper.py  testquantiles.py  testshiftsmear.py  testsparsehistogram.py  testsparsematrixatomic.py  testsymmatrixatomic.py
