[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "narf-ioutils"
version = "0.1.4"
description = "Storage of objects in h5py files with lazy reading."
readme = { file = "doc/ioutils.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [
    {name = "Josh Bendavid", email = "josh.bendavid@cern.ch"},
    {name = "Kenneth Long", email = "kenneth.long@cern.ch"},
    {name = "David Walter", email = "david.walter@cern.ch"}
]
urls = {Homepage = "https://github.com/bendavid/narf"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.8"

dependencies = [
    "boost-histogram>=1.3.2",
    "h5py>=3.0.0",
    "hdf5plugin>=3.4.0",
    "hist>=2.6.0",  
    "numpy>=1.19.0"
]

[tool.setuptools.packages.find]
where = ["."]